Improved the test and training data functions

--- a/California_Regression_Model.ipynb
+++ b/California_Regression_Model.ipynb
@@ -16,14 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
         },
         "id": "WoTUnYteWoRZ",
-        "outputId": "da57c8ad-126f-42ce-d5b1-90bcff07c9e9"
+        "outputId": "12f93537-c94d-4a2e-e004-d78f4f36649b"
       },
       "outputs": [
         {
@@ -34,9 +34,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b4bc7c62-e955-4bd9-8353-8f11609a56e1\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-474c5418-0d04-41d0-a13a-c7ed69cf494a\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-b4bc7c62-e955-4bd9-8353-8f11609a56e1\">\n",
+              "     <output id=\"result-474c5418-0d04-41d0-a13a-c7ed69cf494a\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -244,25 +244,10 @@
         "housing = pd.read_csv('housing.csv')\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "M_15oRcCgNX5",
-        "outputId": "f3a3ee31-c233-4e4c-f5ee-8654951aa189"
+        "id": "M_15oRcCgNX5"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.4999"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -276,9 +261,9 @@
           "height": 860
         },
         "id": "OGLV9RA_b_m2",
-        "outputId": "556cefd7-94ec-43eb-c938-5a0dba90d23e"
+        "outputId": "70a2e680-918f-4da7-8b9a-ebe11ded74ef"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +281,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -320,6 +305,13 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tH2OJsR4SO1S"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def shuffle_split_data(data,test_ratio):\n",
@@ -339,9 +331,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1GJo0CfTk_fI",
-        "outputId": "27f3b612-1ab3-45ef-95aa-e1b615d1c778"
+        "outputId": "33c3cebd-7d72-477e-eadc-0ce525fac95c",
+        "collapsed": true
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,6 +345,67 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating Proper Test Set that is independent of modified data"
+      ],
+      "metadata": {
+        "id": "CxLQoW--STtn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from zlib import crc32 #import the library to convert numbers to hashes\n",
+        "\n",
+        "def is_id_in_test_set(identifier,test_ratio):\n",
+        "  return crc32(np.int64(identifier))<test_ratio*2**32 # left handside converts the identifier to an integer and then uses that as input for crc32 function\n",
+        "  #crc32() converts any integer to a pseudorandom number (for the same input you get the same random number) between 0 and 2^32 -1 inclusive\n",
+        "  #the right handside is a threshold that these numbers must be less than in order to be in the test set, we defined it to be as product as shown above\n",
+        "\n",
+        "def split_data_with_id_has(data,test_ratio,id_column):\n",
+        "  ids = data[id_column] #create a series based on the index column\n",
+        "  boolean_id = ids.apply(lambda id : is_id_in_test_set(id,test_ratio)) #apply a lambda expression where each id in ids is use as an argument in the lambda expression\n",
+        "  #creating a boolean series where the true values are the ones that passed the test\n",
+        "  return data.loc[boolean_id], data.loc[~boolean_id] #returns two series, one is specifically the rows in the data that are true in boolean id and the other one contains rows whose id did not pass the check"
+      ],
+      "metadata": {
+        "id": "Y7Agtm8eSSh7"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gTe8y7_-VhYT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Apply the training data functions"
+      ],
+      "metadata": {
+        "id": "4v81pVvqW3sn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "housing_with_index = housing.reset_index()\n",
+        "test_data, training_data = split_data_with_id_has(housing_with_index,0.2,'index')"
+      ],
+      "metadata": {
+        "id": "P7UYfCqDW729"
+      },
+      "execution_count": 9,
+      "outputs": []
     }
   ]
 }
